--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -18,7 +18,7 @@
             android:id="@+id/relativelayout"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="@color/white"
+            android:background="@drawable/screen_background_gradient"
             android:elevation="8dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
                 android:gravity="start">
 
                 <ImageView
@@ -36,7 +35,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_back_black" />
+                    android:src="@drawable/ic_back_white" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -51,7 +50,7 @@
                         android:layout_width="100dp"
                         android:layout_height="52dp"
                         android:layout_marginStart="-16dp"
-                        android:src="@drawable/ic_logo_splash"
+                        android:src="@drawable/ic_logo_splash_white"
                         android:visibility="visible" />
 
                     <com.transport.mall.utils.common.MfTextView
@@ -74,7 +73,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="16dp"
-                    android:src="@drawable/threedot" />
+                    android:src="@drawable/threedot"
+                    app:tint="@color/white" />
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
