--- a/app/src/main/res/layout/fragment_dhaba_details.xml
+++ b/app/src/main/res/layout/fragment_dhaba_details.xml
@@ -299,6 +299,35 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/informationTil"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
+                    android:hint="@string/information"
+                    app:boxStrokeColor="@color/input_selector"
+                    app:boxStrokeWidth="0.6dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/areaTil">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edInformation"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
+                        android:gravity="top"
+                        android:inputType="text"
+                        android:maxLines="6"
+                        android:minHeight="@dimen/_80sdp"
+                        android:text="@={viewModel.dhabaModel.informations}"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
                 <FrameLayout
                     android:id="@+id/flHighway"
                     android:layout_width="match_parent"
@@ -307,7 +336,7 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintEnd_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/areaTil">
+                    app:layout_constraintTop_toBottomOf="@+id/informationTil">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/tIHighway"
