--- a/app/src/main/res/layout/fragment_helpline.xml
+++ b/app/src/main/res/layout/fragment_helpline.xml
@@ -148,7 +148,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:scaleType="fitXY"
-                                android:src="@drawable/call_image" />
+                                android:src="@drawable/ic_chat_helpline" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
