added customer module in Owner login, add customer dialog with animation. Api implementation(in progress)

--- a/app/src/main/res/layout/dialog_add_customer.xml
+++ b/app/src/main/res/layout/dialog_add_customer.xml
@@ -15,16 +15,14 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
         android:padding="@dimen/_15sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/white_round_corners"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/_15sdp"
-            android:paddingRight="@dimen/_15sdp"
             android:paddingBottom="@dimen/_20sdp">
 
             <androidx.appcompat.widget.AppCompatTextView
