--- a/app/src/main/res/layout/fragment_customers.xml
+++ b/app/src/main/res/layout/fragment_customers.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <import type="com.transport.mall.R" />
 
         <import type="android.view.View" />
@@ -12,8 +13,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <LinearLayout
             android:id="@+id/llMainData"
@@ -21,38 +22,46 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/ll_top"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="@dimen/_10sdp">
+                android:elevation="@dimen/_5sdp"
+                app:cardBackgroundColor="@color/white">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:id="@+id/ll_top"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/customers"
-                    android:textSize="@dimen/_14sdp"
-                    android:textColor="@color/black" />
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_10sdp">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/b_add_new"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/primary_color_btn_selector"
-                    android:fontFamily="@font/opensans_bold"
-                    android:padding="@dimen/_10sdp"
-                    android:text="@string/add_new"
-                    android:textColor="@color/white" />
-            </LinearLayout>
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/customers"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_14sdp" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/b_add_new"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/primary_color_btn_selector"
+                        android:fontFamily="@font/opensans_bold"
+                        android:paddingHorizontal="@dimen/_10sdp"
+                        android:paddingVertical="@dimen/_7sdp"
+                        android:text="@string/add_new"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edSearch"
-                android:layout_margin="@dimen/_10sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
                 android:background="@drawable/grey_stroke"
                 android:drawableStart="@drawable/ic_search"
                 android:drawablePadding="5dp"
@@ -76,12 +85,12 @@
             android:id="@+id/llNoData"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@color/white"
             android:gravity="center"
-            android:layout_gravity="center"
+            android:orientation="vertical"
             android:visibility="gone"
-            tools:visibility="visible"
-            android:orientation="vertical">
+            tools:visibility="visible">
 
             <ImageView
                 android:layout_width="@dimen/_100sdp"
@@ -92,8 +101,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/_10sdp"
-                android:gravity="center"
                 android:fontFamily="@font/opensans_regular"
+                android:gravity="center"
                 android:text="@string/no_customers"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
