--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -19,6 +19,7 @@
         android:padding="@dimen/_15sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/b_ok"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/white_round_corners"
@@ -29,8 +30,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_icon"
-                android:layout_width="@dimen/_50sdp"
-                android:layout_height="@dimen/_50sdp"
+                android:layout_width="@dimen/_60sdp"
+                android:layout_height="@dimen/_60sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:src="@drawable/ic_verified"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +55,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/iv_icon" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/b_ok"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
@@ -63,6 +63,7 @@
                 android:gravity="center"
                 android:padding="@dimen/_10sdp"
                 android:text="@string/ok"
+                android:visibility="gone"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="18sp"
